# Causal-AI-for-Off-Target-Prediction

./: .env.example  .gitignore  Makefile  pyproject.toml  readme.md
dag/: __init__.py  concepts.py  do_calculus.py  energy.py  features.py  independence_tests.py  mismatch.py  nodes.py  pam.py  scm.py  validate.py
doc/: findings.md  phase_2.md  project_report.md
evaluation/: __init__.py  bas.py  benchmark.py  caet.py  ccs.py  ess.py  metrics.py  plots.py  report.py
experiments/: utils.py
experiments/configs/: base.yaml
experiments/exp_01_baseline/: __init__.py  config.yaml  config_no_shap.yaml  run.py
experiments/exp_02_deep/: __init__.py  config.yaml  run.py
experiments/exp_02_scm/: config.yaml  config_mismatch_variant.yaml  run.py
experiments/exp_03_cbm/: __init__.py  config.yaml  run.py
experiments/exp_03_neural_scm/: config.yaml  config_exp22a_lr_constant.yaml  (+15 more)
explainability/: __init__.py  _intervention_utils.py  attention.py  calibrate_assay_shift.py  characterize_saturated_pairs.py  contrastive.py  explain_thermodynamics.py  ig.py  logger.py  losses.py  make_architecture_figure.py  make_dag_figure.py  make_dag_figure_tufte.py  make_data_pipeline_figure.py  prior.py  run_counterfactual_thesis.py  shap_utils.py  simulate_intervention.py  simulate_intervention_batch.py  thesis_plots.py
models/: __init__.py  train.py
notebooks/: 01_eda.ipynb  02_dag_validation.ipynb  03_baseline.ipynb  04_deep.ipynb  05_explainability.ipynb
tests/: conftest.py  dump_predictions_adopted.py  statistical_comparison.py  test_ccs_adopted.py  test_ccs_falsifiability.py
(+19 files in other folders)
