[project]
name = "crispr-explainability"
version = "0.1.0"
description = "CRISPR off-target prediction with biologically grounded explainability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16.1",
  "scikit-learn>=1.5",
  "xgboost>=2.1",
  "catboost>=1.2",
  "torch>=2.3",
  "captum>=0.7",
  "shap>=0.46",
  "h5py>=3.11",
  "matplotlib>=3.9",
  "seaborn>=0.13",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "pgmpy>=1.1.0",
  "networkx>=3.6.1",
  "torchvision>=0.26.0",
  "wandb>=0.26.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "jupyter>=1.0",
  "ipykernel>=6.29",
]

[project.scripts]
crispr-exp01 = "experiments.exp_01_baseline.run:cli_main"
crispr-exp02 = "experiments.exp_02_deep.run:cli_main"
crispr-exp03 = "experiments.exp_03_cbm.run:cli_main"
crispr-benchmark = "evaluation.benchmark:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["dag", "models", "explainability", "evaluation", "experiments"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
